--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
   <body>
     <section class="head">
       <nav>
-      <div class="logo">
-        <img src="images/logo.png" alt="" />
-      </div>
-      <div class="btn">
-        <button class="btn1">Log in</button>
-        <button class="btn2">Sign up</button>
-        <div class="en">
-          <i class="fa-solid fa-globe font"></i> <span>EN</span>
+        <div class="logo">
+          <img src="images/logo.png" alt="" />
         </div>
-        <div class="mark"><i class="fa-solid fa-cart-shopping font"></i></div>
-      </div>
-    </nav>
+        <div class="btn">
+          <button class="btn1">Log in</button>
+          <button class="btn2">Sign up</button>
+          <div class="en">
+            <i class="fa-solid fa-globe font"></i> <span>EN</span>
+          </div>
+          <div class="mark"><i class="fa-solid fa-cart-shopping font"></i></div>
+        </div>
+      </nav>
     </section>
-    <section class="container">
+    <section class="container gray">
       <div class="main">
         <section class="hero">
           <div class="search-bar">
@@ -45,7 +45,8 @@
                 <input
                   type="text"
                   placeholder="Your street and street number"
-                /><a class="size"
+                /><a
+                  class="size"
                   href="https://www.google.com/maps?q=31.5204,74.3587"
                   target="_blank"
                 >
@@ -61,11 +62,156 @@
           </div>
         </section>
 
-        <section class="container">
-         <div class="p-food">You prepare the food, we handle the rest</div>
+        <section class="container white margin">
+          <div class="p-food hero">
+            You prepare the food, we handle the rest
+          </div>
         </section>
       </div>
+      <div class="container white">
+        <section class="food-img">
+          <img src="images/home-vendor-pk.webp" alt="" />
+        </section>
 
+        <section class="container white margin">
+          <div class="p-food hero">Find us in these cities and many more!</div>
+        </section>
+      </div>
+      <div class="container white">
+        <section class="food-card hero">
+          <div class="card">
+            <img src="images/Islamabad.webp" alt="" />
+            <div class="city-name">Islamabad</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Karachi.webp" alt="" />
+            <div class="city-name">Karachi</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Lahore.webp" alt="" />
+            <div class="city-name">Lahore</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Faisalabad.webp" alt="" />
+            <div class="city-name">Faisalabad</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Rawalpindi.webp" alt="" />
+            <div class="city-name">Rawalpindi</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Abottabad.webp" alt="" />
+            <div class="city-name">Abbottabad</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Bahawalpur.webp" alt="" />
+            <div class="city-name">Bahawalpur</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-DeraGhaziKhan.webp" alt="" />
+            <div class="city-name">Dera Ghazi Khan</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Gujranwala.webp" alt="" />
+            <div class="city-name">Gujranwala</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Gujrat.jpg.webp" alt="" />
+            <div class="city-name">Gujrat</div>
+          </div>
+          <div class="card">
+            <img src="images/Hyderabad.webp" alt="" />
+            <div class="city-name">Hyderabad</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Jhelum.webp" alt="" />
+            <div class="city-name">Jhelum</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Kamoke.webp" alt="" />
+            <div class="city-name">Kamoke</div>
+          </div>
+          <div class="card">
+            <img src="images/city-tile-Larkana.webp" alt="" />
+            <div class="city-name">Larkana</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Mangla.webp" alt="" />
+            <div class="city-name">Mangla</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Mardan.webp" alt="" />
+            <div class="city-name">Mardan</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Multan.webp" alt="" />
+            <div class="city-name">Multan</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Murree.webp" alt="" />
+            <div class="city-name">Maree</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Okara.webp" alt="" />
+            <div class="city-name">Okara</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-PanoAqil.webp" alt="" />
+            <div class="city-name">Pano Aqil</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Peshawar.webp" alt="" />
+            <div class="city-name">Peshawar</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Quetta.webp" alt="" />
+            <div class="city-name">Quetta</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-RahimYarKhan.webp" alt="" />
+            <div class="city-name">Rahim Yar Khan</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Sadiqabad.webp" alt="" />
+            <div class="city-name">Sadiqabad</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Sahiwal.webp" alt="" />
+            <div class="city-name">Sahiwals</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Sargodha.webp" alt="" />
+            <div class="city-name">Sargodha</div>
+          </div>
+
+          <div class="card">
+            <img src="images/city-tile-Sheikhupura.jpg.webp" alt="" />
+            <div class="city-name">Sheikhpura</div>
+          </div>
+
+          <div class="card">
+            <img src="images/Sialkot (1).webp" alt="" />
+            <div class="city-name">Sialkot</div>
+          </div>
+        </section>
+      </div>
     </section>
   </body>
 </html>
